# PyLCF

./: .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: ANLEITUNG.md  USERGUIDE_EN.md
examples/: paste_table.txt  shared_grid.xlsx
examples/folder/: measured.xlsx  ref_DM.xlsx  ref_Red.xlsx  ref_WT.xlsx
pylcf/: __init__.py  __main__.py  cli.py  core.py  gui.py
tests/: test_features.py  test_overlay.py  test_slider.py
