[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pylcf"
dynamic = ["version"]
description = "Linear Combination Fitting (LCF) of 1-D data — Tkinter GUI + command-line interface"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Lukas Knauer" }]
keywords = ["linear combination fitting", "spectroscopy", "NIS", "NRVS", "XAFS", "LCF"]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "pandas>=1.3",
    "openpyxl>=3.0",
]

[project.urls]
Homepage = "https://github.com/lknauer/pylcf"

[project.scripts]
pylcf = "pylcf.gui:main"
pylcf-cli = "pylcf.cli:main"

[tool.setuptools]
packages = ["pylcf"]

[tool.setuptools.dynamic]
version = { attr = "pylcf.core.APP_VERSION" }

[tool.setuptools.package-data]
pylcf = ["py.typed"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E401", "E402", "E701", "E702", "E741"]
